streamlined to use sh and bat files to access Maven